Change page title

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     -->
     <!-- Semantic ui css -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css">
-    <title>React App</title>
+    <title>Cakes</title>
   </head>
   <body>
     <noscript>
